# people-directory

./: CHANGELOG.md  Dockerfile  README.md  requirements.txt  setup.cfg  update_db.py
.github/workflows/: docker.yaml  docker.yml  semantic-release.yml  wipac_cicd.yaml
people_directory/: people.py  server.py
people_directory/static/: index.html  main.css  main.js
