[wipac:cicd_setup_builder]
python_min = 3.8
package_dirs = people_directory

[options]
install_requires =
	motor
	wipac-dev-tools
	wipac-keycloak-rest-services
	wipac-rest-tools

[options.extras_require]
tests =
	pytest
	pytest-asyncio
	pytest-cov
	pytest-mock
	coverage
	flake8

[coverage:run]
branch = True
source = people_directory

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True
skip_empty = True

[coverage:html]
directory = htmlcov

[flake8]
ignore = E203,E226,E228,E231,E501,W503,W504
exclude = env,tests


[tool:pytest]
markers = role

[semantic_release]
branch = main
version_variable = people_directory/__init__.py:__version__
upload_to_repository = False
upload_to_release = False
patch_without_tag = True
commit_parser = semantic_release.history.tag_parser
minor_tag = [minor]
fix_tag = [fix]
